--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@
 # ══════════════════════════════════════════════
 
 # --- General ---
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 set -g history-limit 10000
 set -g base-index 1
 setw -g pane-base-index 1
