Fix cava, add fn key handler, cmus, cava pipewire config
- Rebuild cava from source with pipewire input support (Fedora pkg segfaults)
- Use /usr/local/bin/cava and /usr/local/bin/cmus in tmux bindings
- Add asahi-fnkeys.sh: F1/F2 brightness, F10 mute, F11/F12 volume with audio beep, F5/F6 kbd backlight
- Add asahi-fnkeys.service systemd unit
- Change cava input method from pulse to pipewire
- Disabled unnecessary services: abrt, bluetooth, avahi, smartd, atd

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,8 +61,8 @@ bind i new-window -n "net" "sudo iftop -i wlp1s0f0"
 bind w new-window -n "wifi" "nmtui"
 
 # Media
-bind v new-window -n "vis" "cava"
-bind M new-window -n "music" "cmus"
+bind v new-window -n "vis" "/usr/local/bin/cava"
+bind M new-window -n "music" "/usr/local/bin/cmus"
 
 # Productivity
 bind c new-window -n "cal" "calcurse"
