Critical fix: remove evtest --grab, disable auto screensaver lock, fix RTC
- Remove --grab from evtest in asahi-fnkeys.sh (was stealing exclusive keyboard access,
  preventing login and screensaver exit)
- Disable lock-after-time in tmux (can trap session if keyboard blocked)
- Keep all fn key functionality intact (brightness, volume, mute, kbd backlight)
- Fix RTC to UTC mode (prevents 'time jumped backwards' journal spam on reboot)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -112,6 +112,7 @@ setw -g monitor-activity on
 set -g visual-activity off
 setw -g window-status-activity-style "fg=#ffff00,bg=#0a0a0a"
 
-# --- Matrix screensaver (idle lock) ---
-set -g lock-command "cmatrix -ab -u 4 -C green"
-set -g lock-after-time 300
+# --- Matrix screensaver (manual only: Ctrl-a m) ---
+# lock-after-time disabled — can trap session if keyboard input is blocked
+# set -g lock-command "cmatrix -ab -u 4 -C green"
+# set -g lock-after-time 300
