Replace evtest with python3-evdev fn key handler
- Grabs Apple keyboard exclusively via evdev
- Handles media keys (brightness, volume, mute, kbd backlight) internally
- Forwards ALL other keys through uinput virtual keyboard
- Eliminates stray Q/P characters from media keys reaching the terminal
- Auto-reconnects if keyboard device disappears

--- a/system/asahi-fnkeys.service
+++ b/system/asahi-fnkeys.service
@@ -4,7 +4,7 @@ After=multi-user.target
 
 [Service]
 Type=simple
-ExecStart=/usr/local/bin/asahi-fnkeys.sh
+ExecStart=/usr/bin/python3 /usr/local/bin/asahi-fnkeys.py
 Restart=always
 RestartSec=3
 
