Fix cmus m4a, nmtui, calcurse, kbd backlight, dashboard 4-pane
- Rebuild cmus with ffmpeg support (m4a/aac/mp4/wma now playable)
- Install NetworkManager-tui (nmtui was missing, Ctrl-a w now works)
- Fix calcurse: remove unsupported appearance.sidebar option
- Add kbdlight script + tmux shortcuts (Ctrl-a F5/F6/F7) for Air M2 15" (no hw keys)
- Dashboard: 4-pane layout (btop, cava, fastfetch, cmatrix)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,6 +69,11 @@ bind c new-window -n "cal" "calcurse"
 bind R new-window -n "rss" "newsboat"
 bind W new-window -n "web" "w3m https://lite.duckduckgo.com"
 
+# Keyboard backlight (no dedicated hw keys on Air M2 15")
+bind F5 run-shell "~/bin/kbdlight down" \; display "KBD backlight -"
+bind F6 run-shell "~/bin/kbdlight up" \; display "KBD backlight +"
+bind F7 run-shell "~/bin/kbdlight toggle" \; display "KBD backlight toggle"
+
 # Dashboard (split layout)
 bind D run-shell "~/.tmux/dashboard.sh"
 
