Fix kbd backlight shortcuts (remove F5/F6/F7 — F6 is suspend), update README
- Remove F5/F6/F7 tmux bindings (F6 triggers hardware suspend on Air M2 15")
- New kbd backlight shortcuts: Ctrl-a \ (toggle), ] (up), [ (down)
- README: add fn key handler, auto-brightness, 4-pane dashboard, kbd shortcuts,
  disabled services, console scaling, fnmode info, updated idle RAM to 162MB

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,9 +70,13 @@ bind R new-window -n "rss" "newsboat"
 bind W new-window -n "web" "w3m https://lite.duckduckgo.com"
 
 # Keyboard backlight (no dedicated hw keys on Air M2 15")
-bind F5 run-shell "~/bin/kbdlight down" \; display "KBD backlight -"
-bind F6 run-shell "~/bin/kbdlight up" \; display "KBD backlight +"
-bind F7 run-shell "~/bin/kbdlight toggle" \; display "KBD backlight toggle"
+# NEVER bind F5/F6/F7 — F6 is hardware suspend on this machine
+unbind F5
+unbind F6
+unbind F7
+bind \\ run-shell "~/bin/kbdlight toggle" \; display "KBD backlight toggle"
+bind ] run-shell "~/bin/kbdlight up" \; display "KBD backlight +"
+bind [ run-shell "~/bin/kbdlight down" \; display "KBD backlight -"
 
 # Dashboard (split layout)
 bind D run-shell "~/.tmux/dashboard.sh"
